# clang

include/clang/CPPFormat/: Format.h
lib/: CMakeLists.txt
lib/CPPFormat/: .clang-format  AffectedRangeManager.cpp  AffectedRangeManager.h  BreakableToken.cpp  BreakableToken.h  CMakeLists.txt  ContinuationIndenter.cpp  ContinuationIndenter.h  Encoding.h  Format.cpp  FormatToken.cpp  FormatToken.h  FormatTokenLexer.cpp  FormatTokenLexer.h  NamespaceEndCommentsFixer.cpp  NamespaceEndCommentsFixer.h  SortJavaScriptImports.cpp  SortJavaScriptImports.h  TokenAnalyzer.cpp  TokenAnalyzer.h  TokenAnnotator.cpp  TokenAnnotator.h  UnwrappedLineFormatter.cpp  UnwrappedLineFormatter.h  UnwrappedLineParser.cpp  UnwrappedLineParser.h  UsingDeclarationsSorter.cpp  UsingDeclarationsSorter.h  WhitespaceManager.cpp  WhitespaceManager.h
lib/Format/: AffectedRangeManager.cpp  ContinuationIndenter.cpp  Format.cpp  FormatToken.cpp  FormatToken.h  FormatTokenLexer.cpp  NamespaceEndCommentsFixer.cpp  SortJavaScriptImports.cpp  TokenAnnotator.cpp  UnwrappedLineFormatter.cpp  UnwrappedLineParser.cpp  UsingDeclarationsSorter.cpp  WhitespaceManager.cpp
tools/: CMakeLists.txt
tools/cpp-format/: CMakeLists.txt
tools/cpp-format-vs/: CMakeLists.txt
unittests/: CMakeLists.txt
unittests/CPPFormat/: CMakeLists.txt  CleanupTest.cpp  FormatTest.cpp  FormatTestComments.cpp  FormatTestSelective.cpp  NamespaceEndCommentsFixerTest.cpp  SortIncludesTest.cpp  UsingDeclarationsSorterTest.cpp
unittests/Format/: FormatTest.cpp
